[package]
name = "pallet-aggregate"
version = "0.1.0"
description = "A pallet to aggregate proof statements based on domain id"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"

[lints]
workspace = true

[dependencies]
log = { workspace = true }
binary-merkle-tree = { workspace = true }

codec = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }

frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }

hp-on-proof-verified = { workspace = true }
hp-dispatch = { workspace = true }
hex-literal = { workspace = true }

educe = { version = "0.6.0", default-features = false, features = [
    "Clone",
] }

[dev-dependencies]
pallet-balances = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }
rstest = { workspace = true }

[features]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"hp-dispatch/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
default = [ "std" ]
std = [
	"binary-merkle-tree/std",
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"hp-dispatch/std",
	"hp-on-proof-verified/std",
	"log/std",
	"pallet-balances/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"hp-dispatch/try-runtime",
	"pallet-balances/try-runtime",
	"sp-runtime/try-runtime",
]
