[package]
name = "pallet-crl"
version = "0.1.0"
description = "A pallet to verify and store certificate revocation lists"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"

[lints]
workspace = true

[dependencies]
log = { workspace = true }
chrono = { workspace = true }

codec = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }

frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }

tee-verifier = { workspace = true }

[dev-dependencies]
pallet-balances = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }

[features]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-balances/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"tee-verifier/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-balances/try-runtime",
	"sp-runtime/try-runtime",
]
