[package]
name = "stwo"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.4", default-features = false, features = ["derive"] }
scale-info = { version = "2.8.0", default-features = false, features = ["derive"] }

frame-support = { workspace = true }
frame-system = { workspace = true }
log = { workspace = true }

serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# Real STARK cryptographic verification
starknet-crypto = { version = "0.7.1", default-features = false, features = ["alloc"] }
starknet-types-core = { version = "0.1.5", default-features = false, features = ["alloc"] }

# Benchmarking dependencies
frame-benchmarking = { workspace = true, optional = true }

# Testing dependencies
sp-core = { workspace = true, optional = true }
sp-runtime = { workspace = true, optional = true }
sp-io = { workspace = true, optional = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "log/std",
    "serde/std",
    "serde_json/std",
    "starknet-crypto/std",
    "starknet-types-core/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-io/std",
]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "frame-benchmarking/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]
