[package]
name = "hp-dispatch"
version = "0.1.0"
license = "Apache-2.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
binary-merkle-tree = { workspace = true }
ismp = { workspace = true }

codec = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }

frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
sp-core = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }

hp-on-proof-verified = { workspace = true }
hex-literal = { workspace = true }

[dev-dependencies]
pallet-balances = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }
rstest = { workspace = true }

[features]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks"
]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "sp-runtime/std",
    "sp-core/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "binary-merkle-tree/std",
    "log/std",
    "pallet-balances/std",
    "sp-io/std",
    "sp-std/std",
    "ismp/std",
    "hp-on-proof-verified/std"
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "pallet-balances/try-runtime",
    "sp-runtime/try-runtime"
]
