[package]
name = "hp-dispatch"
version = "0.1.0"
license = "Apache-2.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
ismp = { workspace = true }
codec = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
frame-support = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true, features = ["std"] }

[features]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks"
]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "sp-runtime/std",
    "sp-core/std",
    "frame-support/std",
    "log/std",
    "sp-io/std",
    "ismp/std",
]
try-runtime = [
    "frame-support/try-runtime",
    "sp-runtime/try-runtime"
]
