[package]
name = "zkv-benchmarks"
rust-version = "1.70"
version = "11.0.0"
authors.workspace = true
edition.workspace = true
license = "GPL-3.0"
description = "Benchmark templates and utils to build the hardware requirements for running a ZkVerify node."

[dependencies]
sc-sysinfo = { workspace = true }
serde_json = { workspace = true }
