[package]
name = "ultraplonk-vk-hash"
version = "0.1.0"
description = "Add runtime API for computing the vk hash"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license = "Apache-2.0"

[dependencies]



[features]
default = ["std"]
std = [
    
]
