[package]
name = "zkv-runtime-common"
version = "1.0.0"
description = "Common code shared between runtimes"
authors.workspace = true
homepage = "https://github.com/zkVerify/zkVerify"
edition.workspace = true
publish = false
repository.workspace = true
license = "Apache-2.0"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
anyhow = { workspace = true }
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive", "serde"] }

sp-api = { workspace = true }
sp-consensus-babe = { workspace = true, features = ["serde"] }
finality-grandpa = { workspace = true }
sp-consensus-grandpa = { workspace = true, features = ["serde"] }
sp-core = { workspace = true, features = ["serde"] }
sp-inherents = { workspace = true }
sp-runtime = { workspace = true, features = ["serde"] }
sp-staking = { workspace = true }
sp-storage = { workspace = true }
sp-version = { workspace = true, features = ["serde"] }
sp-weights = { workspace = true }
sp-io = { workspace = true }
log = { workspace = true }

authority-discovery-primitives = { workspace = true }

frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
pallet-authorship = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }
pallet-staking = { workspace = true, default-features = false }
polkadot-primitives = { workspace = true }

[dev-dependencies]

codec = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
rstest = { workspace = true }

[features]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"sp-staking/runtime-benchmarks",
]
fast-runtime = []
default = [ "std" ]
std = [
	"anyhow/std",
	"authority-discovery-primitives/std",
	"codec/std",
	"finality-grandpa/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-staking/std",
	"polkadot-primitives/std",
	"scale-info/std",
	"sp-api/std",
	"sp-consensus-babe/std",
	"sp-consensus-grandpa/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-staking/std",
	"sp-storage/std",
	"sp-version/std",
	"sp-weights/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-staking/try-runtime",
	"sp-runtime/try-runtime",
]
