 [package]
 name = "zkv-transform"
 version = "0.1.0"
 edition = "2021"
 license = "Apache-2.0"
 publish = false

[dependencies]
codec = { workspace = true, features = ["std"] }
scale-info = { workspace = true, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
hex = "0.4"


